--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: I'm Awesome
+title: Totally Awesome
+date: 2019-04-10
 author: Tenrax
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
