--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: "Awesome"
 date: 2019-04-10
 ---
+title: Awesome
 author: Tenrax
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
